apps/xrootd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xrootd
  namespace: xrootd
spec:
  replicas: 1
  strategy:
    type: Recreate # Avoid RollingUpdate since the startup will be blocked by the volume mount/unmount
  selector:
    matchLabels:
      app: xrootd
  template:
    metadata:
      labels:
        app: xrootd
    spec:
      securityContext:
        # Ensure the group ownership is set to GID 1000
        # This GUID/UID must match in the initContainer script below,
        # and in the main container's securityContext.
        fsGroup: 1000
      containers:
      - name: xrootd
        image: rucio/xrootd:latest
        command: ["/usr/bin/xrootd"]
        args: ["-c", "/etc/xrootd/xrootd-http.cfg", "-k", "fifo", "-s", "/run/xrootd/xrootd-http.pid", "-n", "http"]
        ports:
        - containerPort: 1094 # http and xrootd port
        securityContext:
          runAsUser: 1000        # Run as non-root user
          runAsGroup: 1000       # Run as non-root group
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: xrootd-http-config
          mountPath: /etc/xrootd/
        - name: grid-certs
          mountPath: /etc/grid-security/certificates/
          readOnly: true
        - name: xrootd-data
          mountPath: /data
        - name: spool-dir
          mountPath: /var/spool/xrootd
        - name: run-dir
          mountPath: /run/xrootd
        - name: tls-certs
          mountPath: /etc/grid-security/xrd/
          readOnly: true
      volumes:
      - name: xrootd-http-config
        configMap:
          name: xrootd-http-config
      - name: grid-certs
        emptyDir: {}
      - name: xrootd-data
        persistentVolumeClaim:
          claimName: xrootd-cephfs-pvc
      - name: spool-dir
        emptyDir: {}
      - name: run-dir
        emptyDir: {}
      - name: tls-certs
        emptyDir: {}
      - name: tls-secrets
        secret:
          secretName: xrootd-cert
          defaultMode: 256 # 256 decimal = 0400 octal
