apps/xrootd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xrootd
  namespace: xrootd
spec:
  selector:
    app: xrootd
  ports:
  - name: xrdhttp
    protocol: TCP
    port: 443
    targetPort: 80
  - name: root
    protocol: TCP
    port: 1094
    targetPort: 1094
  type: LoadBalancer
